# psx-web-build

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  add_to_path.bat  build-all.bat  build.bat  build_iso.bat  gpu.h  install.bat  lander_model.h  main.c  trig.c  trig.h
.claude/: settings.local.json
assets/: font.raw  font_clut.raw
src/: bios.c  bios.h  cdda.c  cdda.h  font.c  font_data.h  gpu.c  main.c  model.c  model.h  spu.c  spu.h  xa.c  xa.h
tools/: build_iso.py  convertModel.py
web/: index.html  package.json
web/data/: shaders.js
